# serializer version: 1
# name: test_get_omer[english-1-Nusach.ADOT_MIZRAH]
  'Today is the first day of the Omer'
# ---
# name: test_get_omer[english-1-Nusach.ASHKENAZ]
  'Today is the first day of the Omer'
# ---
# name: test_get_omer[english-1-Nusach.ITALIAN]
  'Today of the Omer is the first day'
# ---
# name: test_get_omer[english-1-Nusach.SFARAD]
  'Today is the first day of the Omer'
# ---
# name: test_get_omer[english-10-Nusach.ADOT_MIZRAH]
  'Today is the tenth day of the Omer, which are one week and three days'
# ---
# name: test_get_omer[english-10-Nusach.ASHKENAZ]
  'Today is the tenth day, which are one week and three days of the Omer'
# ---
# name: test_get_omer[english-10-Nusach.ITALIAN]
  'Today of the Omer is the tenth day, which are one week and three days'
# ---
# name: test_get_omer[english-10-Nusach.SFARAD]
  'Today is the tenth day, which are one week and three days of the Omer'
# ---
# name: test_get_omer[english-11-Nusach.ADOT_MIZRAH]
  'Today is the eleventh day of the Omer, which are one week and four days'
# ---
# name: test_get_omer[english-11-Nusach.ASHKENAZ]
  'Today is the eleventh day, which are one week and four days of the Omer'
# ---
# name: test_get_omer[english-11-Nusach.ITALIAN]
  'Today of the Omer is the eleventh day, which are one week and four days'
# ---
# name: test_get_omer[english-11-Nusach.SFARAD]
  'Today is the eleventh day, which are one week and four days of the Omer'
# ---
# name: test_get_omer[english-12-Nusach.ADOT_MIZRAH]
  'Today is the twelfth day of the Omer, which are one week and five days'
# ---
# name: test_get_omer[english-12-Nusach.ASHKENAZ]
  'Today is the twelfth day, which are one week and five days of the Omer'
# ---
# name: test_get_omer[english-12-Nusach.ITALIAN]
  'Today of the Omer is the twelfth day, which are one week and five days'
# ---
# name: test_get_omer[english-12-Nusach.SFARAD]
  'Today is the twelfth day, which are one week and five days of the Omer'
# ---
# name: test_get_omer[english-13-Nusach.ADOT_MIZRAH]
  'Today is the thirteenth day of the Omer, which are one week and six days'
# ---
# name: test_get_omer[english-13-Nusach.ASHKENAZ]
  'Today is the thirteenth day, which are one week and six days of the Omer'
# ---
# name: test_get_omer[english-13-Nusach.ITALIAN]
  'Today of the Omer is the thirteenth day, which are one week and six days'
# ---
# name: test_get_omer[english-13-Nusach.SFARAD]
  'Today is the thirteenth day, which are one week and six days of the Omer'
# ---
# name: test_get_omer[english-14-Nusach.ADOT_MIZRAH]
  'Today is the fourteenth day of the Omer, which are two weeks'
# ---
# name: test_get_omer[english-14-Nusach.ASHKENAZ]
  'Today is the fourteenth day, which are two weeks of the Omer'
# ---
# name: test_get_omer[english-14-Nusach.ITALIAN]
  'Today of the Omer is the fourteenth day, which are two weeks'
# ---
# name: test_get_omer[english-14-Nusach.SFARAD]
  'Today is the fourteenth day, which are two weeks of the Omer'
# ---
# name: test_get_omer[english-15-Nusach.ADOT_MIZRAH]
  'Today is the fifteenth day of the Omer, which are two weeks and one day'
# ---
# name: test_get_omer[english-15-Nusach.ASHKENAZ]
  'Today is the fifteenth day, which are two weeks and one day of the Omer'
# ---
# name: test_get_omer[english-15-Nusach.ITALIAN]
  'Today of the Omer is the fifteenth day, which are two weeks and one day'
# ---
# name: test_get_omer[english-15-Nusach.SFARAD]
  'Today is the fifteenth day, which are two weeks and one day of the Omer'
# ---
# name: test_get_omer[english-16-Nusach.ADOT_MIZRAH]
  'Today is the sixteenth day of the Omer, which are two weeks and two days'
# ---
# name: test_get_omer[english-16-Nusach.ASHKENAZ]
  'Today is the sixteenth day, which are two weeks and two days of the Omer'
# ---
# name: test_get_omer[english-16-Nusach.ITALIAN]
  'Today of the Omer is the sixteenth day, which are two weeks and two days'
# ---
# name: test_get_omer[english-16-Nusach.SFARAD]
  'Today is the sixteenth day, which are two weeks and two days of the Omer'
# ---
# name: test_get_omer[english-17-Nusach.ADOT_MIZRAH]
  'Today is the seventeenth day of the Omer, which are two weeks and three days'
# ---
# name: test_get_omer[english-17-Nusach.ASHKENAZ]
  'Today is the seventeenth day, which are two weeks and three days of the Omer'
# ---
# name: test_get_omer[english-17-Nusach.ITALIAN]
  'Today of the Omer is the seventeenth day, which are two weeks and three days'
# ---
# name: test_get_omer[english-17-Nusach.SFARAD]
  'Today is the seventeenth day, which are two weeks and three days of the Omer'
# ---
# name: test_get_omer[english-18-Nusach.ADOT_MIZRAH]
  'Today is the eighteenth day of the Omer, which are two weeks and four days'
# ---
# name: test_get_omer[english-18-Nusach.ASHKENAZ]
  'Today is the eighteenth day, which are two weeks and four days of the Omer'
# ---
# name: test_get_omer[english-18-Nusach.ITALIAN]
  'Today of the Omer is the eighteenth day, which are two weeks and four days'
# ---
# name: test_get_omer[english-18-Nusach.SFARAD]
  'Today is the eighteenth day, which are two weeks and four days of the Omer'
# ---
# name: test_get_omer[english-19-Nusach.ADOT_MIZRAH]
  'Today is the nineteenth day of the Omer, which are two weeks and five days'
# ---
# name: test_get_omer[english-19-Nusach.ASHKENAZ]
  'Today is the nineteenth day, which are two weeks and five days of the Omer'
# ---
# name: test_get_omer[english-19-Nusach.ITALIAN]
  'Today of the Omer is the nineteenth day, which are two weeks and five days'
# ---
# name: test_get_omer[english-19-Nusach.SFARAD]
  'Today is the nineteenth day, which are two weeks and five days of the Omer'
# ---
# name: test_get_omer[english-2-Nusach.ADOT_MIZRAH]
  'Today is the second day of the Omer'
# ---
# name: test_get_omer[english-2-Nusach.ASHKENAZ]
  'Today is the second day of the Omer'
# ---
# name: test_get_omer[english-2-Nusach.ITALIAN]
  'Today of the Omer is the second day'
# ---
# name: test_get_omer[english-2-Nusach.SFARAD]
  'Today is the second day of the Omer'
# ---
# name: test_get_omer[english-20-Nusach.ADOT_MIZRAH]
  'Today is the twentieth day of the Omer, which are two weeks and six days'
# ---
# name: test_get_omer[english-20-Nusach.ASHKENAZ]
  'Today is the twentieth day, which are two weeks and six days of the Omer'
# ---
# name: test_get_omer[english-20-Nusach.ITALIAN]
  'Today of the Omer is the twentieth day, which are two weeks and six days'
# ---
# name: test_get_omer[english-20-Nusach.SFARAD]
  'Today is the twentieth day, which are two weeks and six days of the Omer'
# ---
# name: test_get_omer[english-21-Nusach.ADOT_MIZRAH]
  'Today is the twenty-first day of the Omer, which are three weeks'
# ---
# name: test_get_omer[english-21-Nusach.ASHKENAZ]
  'Today is the twenty-first day, which are three weeks of the Omer'
# ---
# name: test_get_omer[english-21-Nusach.ITALIAN]
  'Today of the Omer is the twenty-first day, which are three weeks'
# ---
# name: test_get_omer[english-21-Nusach.SFARAD]
  'Today is the twenty-first day, which are three weeks of the Omer'
# ---
# name: test_get_omer[english-22-Nusach.ADOT_MIZRAH]
  'Today is the twenty-second day of the Omer, which are three weeks and one day'
# ---
# name: test_get_omer[english-22-Nusach.ASHKENAZ]
  'Today is the twenty-second day, which are three weeks and one day of the Omer'
# ---
# name: test_get_omer[english-22-Nusach.ITALIAN]
  'Today of the Omer is the twenty-second day, which are three weeks and one day'
# ---
# name: test_get_omer[english-22-Nusach.SFARAD]
  'Today is the twenty-second day, which are three weeks and one day of the Omer'
# ---
# name: test_get_omer[english-23-Nusach.ADOT_MIZRAH]
  'Today is the twenty-third day of the Omer, which are three weeks and two days'
# ---
# name: test_get_omer[english-23-Nusach.ASHKENAZ]
  'Today is the twenty-third day, which are three weeks and two days of the Omer'
# ---
# name: test_get_omer[english-23-Nusach.ITALIAN]
  'Today of the Omer is the twenty-third day, which are three weeks and two days'
# ---
# name: test_get_omer[english-23-Nusach.SFARAD]
  'Today is the twenty-third day, which are three weeks and two days of the Omer'
# ---
# name: test_get_omer[english-24-Nusach.ADOT_MIZRAH]
  'Today is the twenty-fourth day of the Omer, which are three weeks and three days'
# ---
# name: test_get_omer[english-24-Nusach.ASHKENAZ]
  'Today is the twenty-fourth day, which are three weeks and three days of the Omer'
# ---
# name: test_get_omer[english-24-Nusach.ITALIAN]
  'Today of the Omer is the twenty-fourth day, which are three weeks and three days'
# ---
# name: test_get_omer[english-24-Nusach.SFARAD]
  'Today is the twenty-fourth day, which are three weeks and three days of the Omer'
# ---
# name: test_get_omer[english-25-Nusach.ADOT_MIZRAH]
  'Today is the twenty-fifth day of the Omer, which are three weeks and four days'
# ---
# name: test_get_omer[english-25-Nusach.ASHKENAZ]
  'Today is the twenty-fifth day, which are three weeks and four days of the Omer'
# ---
# name: test_get_omer[english-25-Nusach.ITALIAN]
  'Today of the Omer is the twenty-fifth day, which are three weeks and four days'
# ---
# name: test_get_omer[english-25-Nusach.SFARAD]
  'Today is the twenty-fifth day, which are three weeks and four days of the Omer'
# ---
# name: test_get_omer[english-26-Nusach.ADOT_MIZRAH]
  'Today is the twenty-sixth day of the Omer, which are three weeks and five days'
# ---
# name: test_get_omer[english-26-Nusach.ASHKENAZ]
  'Today is the twenty-sixth day, which are three weeks and five days of the Omer'
# ---
# name: test_get_omer[english-26-Nusach.ITALIAN]
  'Today of the Omer is the twenty-sixth day, which are three weeks and five days'
# ---
# name: test_get_omer[english-26-Nusach.SFARAD]
  'Today is the twenty-sixth day, which are three weeks and five days of the Omer'
# ---
# name: test_get_omer[english-27-Nusach.ADOT_MIZRAH]
  'Today is the twenty-seventh day of the Omer, which are three weeks and six days'
# ---
# name: test_get_omer[english-27-Nusach.ASHKENAZ]
  'Today is the twenty-seventh day, which are three weeks and six days of the Omer'
# ---
# name: test_get_omer[english-27-Nusach.ITALIAN]
  'Today of the Omer is the twenty-seventh day, which are three weeks and six days'
# ---
# name: test_get_omer[english-27-Nusach.SFARAD]
  'Today is the twenty-seventh day, which are three weeks and six days of the Omer'
# ---
# name: test_get_omer[english-28-Nusach.ADOT_MIZRAH]
  'Today is the twenty-eighth day of the Omer, which are four weeks'
# ---
# name: test_get_omer[english-28-Nusach.ASHKENAZ]
  'Today is the twenty-eighth day, which are four weeks of the Omer'
# ---
# name: test_get_omer[english-28-Nusach.ITALIAN]
  'Today of the Omer is the twenty-eighth day, which are four weeks'
# ---
# name: test_get_omer[english-28-Nusach.SFARAD]
  'Today is the twenty-eighth day, which are four weeks of the Omer'
# ---
# name: test_get_omer[english-29-Nusach.ADOT_MIZRAH]
  'Today is the twenty-ninth day of the Omer, which are four weeks and one day'
# ---
# name: test_get_omer[english-29-Nusach.ASHKENAZ]
  'Today is the twenty-ninth day, which are four weeks and one day of the Omer'
# ---
# name: test_get_omer[english-29-Nusach.ITALIAN]
  'Today of the Omer is the twenty-ninth day, which are four weeks and one day'
# ---
# name: test_get_omer[english-29-Nusach.SFARAD]
  'Today is the twenty-ninth day, which are four weeks and one day of the Omer'
# ---
# name: test_get_omer[english-3-Nusach.ADOT_MIZRAH]
  'Today is the third day of the Omer'
# ---
# name: test_get_omer[english-3-Nusach.ASHKENAZ]
  'Today is the third day of the Omer'
# ---
# name: test_get_omer[english-3-Nusach.ITALIAN]
  'Today of the Omer is the third day'
# ---
# name: test_get_omer[english-3-Nusach.SFARAD]
  'Today is the third day of the Omer'
# ---
# name: test_get_omer[english-30-Nusach.ADOT_MIZRAH]
  'Today is the thirtieth day of the Omer, which are four weeks and two days'
# ---
# name: test_get_omer[english-30-Nusach.ASHKENAZ]
  'Today is the thirtieth day, which are four weeks and two days of the Omer'
# ---
# name: test_get_omer[english-30-Nusach.ITALIAN]
  'Today of the Omer is the thirtieth day, which are four weeks and two days'
# ---
# name: test_get_omer[english-30-Nusach.SFARAD]
  'Today is the thirtieth day, which are four weeks and two days of the Omer'
# ---
# name: test_get_omer[english-31-Nusach.ADOT_MIZRAH]
  'Today is the thirty-first day of the Omer, which are four weeks and three days'
# ---
# name: test_get_omer[english-31-Nusach.ASHKENAZ]
  'Today is the thirty-first day, which are four weeks and three days of the Omer'
# ---
# name: test_get_omer[english-31-Nusach.ITALIAN]
  'Today of the Omer is the thirty-first day, which are four weeks and three days'
# ---
# name: test_get_omer[english-31-Nusach.SFARAD]
  'Today is the thirty-first day, which are four weeks and three days of the Omer'
# ---
# name: test_get_omer[english-32-Nusach.ADOT_MIZRAH]
  'Today is the thirty-second day of the Omer, which are four weeks and four days'
# ---
# name: test_get_omer[english-32-Nusach.ASHKENAZ]
  'Today is the thirty-second day, which are four weeks and four days of the Omer'
# ---
# name: test_get_omer[english-32-Nusach.ITALIAN]
  'Today of the Omer is the thirty-second day, which are four weeks and four days'
# ---
# name: test_get_omer[english-32-Nusach.SFARAD]
  'Today is the thirty-second day, which are four weeks and four days of the Omer'
# ---
# name: test_get_omer[english-33-Nusach.ADOT_MIZRAH]
  'Today is the thirty-third day of the Omer, which are four weeks and five days'
# ---
# name: test_get_omer[english-33-Nusach.ASHKENAZ]
  'Today is the thirty-third day, which are four weeks and five days of the Omer'
# ---
# name: test_get_omer[english-33-Nusach.ITALIAN]
  'Today of the Omer is the thirty-third day, which are four weeks and five days'
# ---
# name: test_get_omer[english-33-Nusach.SFARAD]
  'Today is the thirty-third day, which are four weeks and five days of the Omer'
# ---
# name: test_get_omer[english-34-Nusach.ADOT_MIZRAH]
  'Today is the thirty-fourth day of the Omer, which are four weeks and six days'
# ---
# name: test_get_omer[english-34-Nusach.ASHKENAZ]
  'Today is the thirty-fourth day, which are four weeks and six days of the Omer'
# ---
# name: test_get_omer[english-34-Nusach.ITALIAN]
  'Today of the Omer is the thirty-fourth day, which are four weeks and six days'
# ---
# name: test_get_omer[english-34-Nusach.SFARAD]
  'Today is the thirty-fourth day, which are four weeks and six days of the Omer'
# ---
# name: test_get_omer[english-35-Nusach.ADOT_MIZRAH]
  'Today is the thirty-fifth day of the Omer, which are five weeks'
# ---
# name: test_get_omer[english-35-Nusach.ASHKENAZ]
  'Today is the thirty-fifth day, which are five weeks of the Omer'
# ---
# name: test_get_omer[english-35-Nusach.ITALIAN]
  'Today of the Omer is the thirty-fifth day, which are five weeks'
# ---
# name: test_get_omer[english-35-Nusach.SFARAD]
  'Today is the thirty-fifth day, which are five weeks of the Omer'
# ---
# name: test_get_omer[english-36-Nusach.ADOT_MIZRAH]
  'Today is the thirty-sixth day of the Omer, which are five weeks and one day'
# ---
# name: test_get_omer[english-36-Nusach.ASHKENAZ]
  'Today is the thirty-sixth day, which are five weeks and one day of the Omer'
# ---
# name: test_get_omer[english-36-Nusach.ITALIAN]
  'Today of the Omer is the thirty-sixth day, which are five weeks and one day'
# ---
# name: test_get_omer[english-36-Nusach.SFARAD]
  'Today is the thirty-sixth day, which are five weeks and one day of the Omer'
# ---
# name: test_get_omer[english-37-Nusach.ADOT_MIZRAH]
  'Today is the thirty-seventh day of the Omer, which are five weeks and two days'
# ---
# name: test_get_omer[english-37-Nusach.ASHKENAZ]
  'Today is the thirty-seventh day, which are five weeks and two days of the Omer'
# ---
# name: test_get_omer[english-37-Nusach.ITALIAN]
  'Today of the Omer is the thirty-seventh day, which are five weeks and two days'
# ---
# name: test_get_omer[english-37-Nusach.SFARAD]
  'Today is the thirty-seventh day, which are five weeks and two days of the Omer'
# ---
# name: test_get_omer[english-38-Nusach.ADOT_MIZRAH]
  'Today is the thirty-eighth day of the Omer, which are five weeks and three days'
# ---
# name: test_get_omer[english-38-Nusach.ASHKENAZ]
  'Today is the thirty-eighth day, which are five weeks and three days of the Omer'
# ---
# name: test_get_omer[english-38-Nusach.ITALIAN]
  'Today of the Omer is the thirty-eighth day, which are five weeks and three days'
# ---
# name: test_get_omer[english-38-Nusach.SFARAD]
  'Today is the thirty-eighth day, which are five weeks and three days of the Omer'
# ---
# name: test_get_omer[english-39-Nusach.ADOT_MIZRAH]
  'Today is the thirty-ninth day of the Omer, which are five weeks and four days'
# ---
# name: test_get_omer[english-39-Nusach.ASHKENAZ]
  'Today is the thirty-ninth day, which are five weeks and four days of the Omer'
# ---
# name: test_get_omer[english-39-Nusach.ITALIAN]
  'Today of the Omer is the thirty-ninth day, which are five weeks and four days'
# ---
# name: test_get_omer[english-39-Nusach.SFARAD]
  'Today is the thirty-ninth day, which are five weeks and four days of the Omer'
# ---
# name: test_get_omer[english-4-Nusach.ADOT_MIZRAH]
  'Today is the fourth day of the Omer'
# ---
# name: test_get_omer[english-4-Nusach.ASHKENAZ]
  'Today is the fourth day of the Omer'
# ---
# name: test_get_omer[english-4-Nusach.ITALIAN]
  'Today of the Omer is the fourth day'
# ---
# name: test_get_omer[english-4-Nusach.SFARAD]
  'Today is the fourth day of the Omer'
# ---
# name: test_get_omer[english-40-Nusach.ADOT_MIZRAH]
  'Today is the fortieth day of the Omer, which are five weeks and five days'
# ---
# name: test_get_omer[english-40-Nusach.ASHKENAZ]
  'Today is the fortieth day, which are five weeks and five days of the Omer'
# ---
# name: test_get_omer[english-40-Nusach.ITALIAN]
  'Today of the Omer is the fortieth day, which are five weeks and five days'
# ---
# name: test_get_omer[english-40-Nusach.SFARAD]
  'Today is the fortieth day, which are five weeks and five days of the Omer'
# ---
# name: test_get_omer[english-41-Nusach.ADOT_MIZRAH]
  'Today is the forty-first day of the Omer, which are five weeks and six days'
# ---
# name: test_get_omer[english-41-Nusach.ASHKENAZ]
  'Today is the forty-first day, which are five weeks and six days of the Omer'
# ---
# name: test_get_omer[english-41-Nusach.ITALIAN]
  'Today of the Omer is the forty-first day, which are five weeks and six days'
# ---
# name: test_get_omer[english-41-Nusach.SFARAD]
  'Today is the forty-first day, which are five weeks and six days of the Omer'
# ---
# name: test_get_omer[english-42-Nusach.ADOT_MIZRAH]
  'Today is the forty-second day of the Omer, which are six weeks'
# ---
# name: test_get_omer[english-42-Nusach.ASHKENAZ]
  'Today is the forty-second day, which are six weeks of the Omer'
# ---
# name: test_get_omer[english-42-Nusach.ITALIAN]
  'Today of the Omer is the forty-second day, which are six weeks'
# ---
# name: test_get_omer[english-42-Nusach.SFARAD]
  'Today is the forty-second day, which are six weeks of the Omer'
# ---
# name: test_get_omer[english-43-Nusach.ADOT_MIZRAH]
  'Today is the forty-third day of the Omer, which are six weeks and one day'
# ---
# name: test_get_omer[english-43-Nusach.ASHKENAZ]
  'Today is the forty-third day, which are six weeks and one day of the Omer'
# ---
# name: test_get_omer[english-43-Nusach.ITALIAN]
  'Today of the Omer is the forty-third day, which are six weeks and one day'
# ---
# name: test_get_omer[english-43-Nusach.SFARAD]
  'Today is the forty-third day, which are six weeks and one day of the Omer'
# ---
# name: test_get_omer[english-44-Nusach.ADOT_MIZRAH]
  'Today is the forty-fourth day of the Omer, which are six weeks and two days'
# ---
# name: test_get_omer[english-44-Nusach.ASHKENAZ]
  'Today is the forty-fourth day, which are six weeks and two days of the Omer'
# ---
# name: test_get_omer[english-44-Nusach.ITALIAN]
  'Today of the Omer is the forty-fourth day, which are six weeks and two days'
# ---
# name: test_get_omer[english-44-Nusach.SFARAD]
  'Today is the forty-fourth day, which are six weeks and two days of the Omer'
# ---
# name: test_get_omer[english-45-Nusach.ADOT_MIZRAH]
  'Today is the forty-fifth day of the Omer, which are six weeks and three days'
# ---
# name: test_get_omer[english-45-Nusach.ASHKENAZ]
  'Today is the forty-fifth day, which are six weeks and three days of the Omer'
# ---
# name: test_get_omer[english-45-Nusach.ITALIAN]
  'Today of the Omer is the forty-fifth day, which are six weeks and three days'
# ---
# name: test_get_omer[english-45-Nusach.SFARAD]
  'Today is the forty-fifth day, which are six weeks and three days of the Omer'
# ---
# name: test_get_omer[english-46-Nusach.ADOT_MIZRAH]
  'Today is the forty-sixth day of the Omer, which are six weeks and four days'
# ---
# name: test_get_omer[english-46-Nusach.ASHKENAZ]
  'Today is the forty-sixth day, which are six weeks and four days of the Omer'
# ---
# name: test_get_omer[english-46-Nusach.ITALIAN]
  'Today of the Omer is the forty-sixth day, which are six weeks and four days'
# ---
# name: test_get_omer[english-46-Nusach.SFARAD]
  'Today is the forty-sixth day, which are six weeks and four days of the Omer'
# ---
# name: test_get_omer[english-47-Nusach.ADOT_MIZRAH]
  'Today is the forty-seventh day of the Omer, which are six weeks and five days'
# ---
# name: test_get_omer[english-47-Nusach.ASHKENAZ]
  'Today is the forty-seventh day, which are six weeks and five days of the Omer'
# ---
# name: test_get_omer[english-47-Nusach.ITALIAN]
  'Today of the Omer is the forty-seventh day, which are six weeks and five days'
# ---
# name: test_get_omer[english-47-Nusach.SFARAD]
  'Today is the forty-seventh day, which are six weeks and five days of the Omer'
# ---
# name: test_get_omer[english-48-Nusach.ADOT_MIZRAH]
  'Today is the forty-eighth day of the Omer, which are six weeks and six days'
# ---
# name: test_get_omer[english-48-Nusach.ASHKENAZ]
  'Today is the forty-eighth day, which are six weeks and six days of the Omer'
# ---
# name: test_get_omer[english-48-Nusach.ITALIAN]
  'Today of the Omer is the forty-eighth day, which are six weeks and six days'
# ---
# name: test_get_omer[english-48-Nusach.SFARAD]
  'Today is the forty-eighth day, which are six weeks and six days of the Omer'
# ---
# name: test_get_omer[english-49-Nusach.ADOT_MIZRAH]
  'Today is the forty-ninth day of the Omer, which are seven weeks'
# ---
# name: test_get_omer[english-49-Nusach.ASHKENAZ]
  'Today is the forty-ninth day, which are seven weeks of the Omer'
# ---
# name: test_get_omer[english-49-Nusach.ITALIAN]
  'Today of the Omer is the forty-ninth day, which are seven weeks'
# ---
# name: test_get_omer[english-49-Nusach.SFARAD]
  'Today is the forty-ninth day, which are seven weeks of the Omer'
# ---
# name: test_get_omer[english-5-Nusach.ADOT_MIZRAH]
  'Today is the fifth day of the Omer'
# ---
# name: test_get_omer[english-5-Nusach.ASHKENAZ]
  'Today is the fifth day of the Omer'
# ---
# name: test_get_omer[english-5-Nusach.ITALIAN]
  'Today of the Omer is the fifth day'
# ---
# name: test_get_omer[english-5-Nusach.SFARAD]
  'Today is the fifth day of the Omer'
# ---
# name: test_get_omer[english-6-Nusach.ADOT_MIZRAH]
  'Today is the sixth day of the Omer'
# ---
# name: test_get_omer[english-6-Nusach.ASHKENAZ]
  'Today is the sixth day of the Omer'
# ---
# name: test_get_omer[english-6-Nusach.ITALIAN]
  'Today of the Omer is the sixth day'
# ---
# name: test_get_omer[english-6-Nusach.SFARAD]
  'Today is the sixth day of the Omer'
# ---
# name: test_get_omer[english-7-Nusach.ADOT_MIZRAH]
  'Today is the seventh day of the Omer, which are one week'
# ---
# name: test_get_omer[english-7-Nusach.ASHKENAZ]
  'Today is the seventh day, which are one week of the Omer'
# ---
# name: test_get_omer[english-7-Nusach.ITALIAN]
  'Today of the Omer is the seventh day, which are one week'
# ---
# name: test_get_omer[english-7-Nusach.SFARAD]
  'Today is the seventh day, which are one week of the Omer'
# ---
# name: test_get_omer[english-8-Nusach.ADOT_MIZRAH]
  'Today is the eighth day of the Omer, which are one week and one day'
# ---
# name: test_get_omer[english-8-Nusach.ASHKENAZ]
  'Today is the eighth day, which are one week and one day of the Omer'
# ---
# name: test_get_omer[english-8-Nusach.ITALIAN]
  'Today of the Omer is the eighth day, which are one week and one day'
# ---
# name: test_get_omer[english-8-Nusach.SFARAD]
  'Today is the eighth day, which are one week and one day of the Omer'
# ---
# name: test_get_omer[english-9-Nusach.ADOT_MIZRAH]
  'Today is the ninth day of the Omer, which are one week and two days'
# ---
# name: test_get_omer[english-9-Nusach.ASHKENAZ]
  'Today is the ninth day, which are one week and two days of the Omer'
# ---
# name: test_get_omer[english-9-Nusach.ITALIAN]
  'Today of the Omer is the ninth day, which are one week and two days'
# ---
# name: test_get_omer[english-9-Nusach.SFARAD]
  'Today is the ninth day, which are one week and two days of the Omer'
# ---
# name: test_get_omer[french-1-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le premier jour de l'Omer"
# ---
# name: test_get_omer[french-1-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le premier jour de l'Omer"
# ---
# name: test_get_omer[french-1-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le premier jour"
# ---
# name: test_get_omer[french-1-Nusach.SFARAD]
  "Aujourd'hui c'est le premier jour de l'Omer"
# ---
# name: test_get_omer[french-10-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le dixième jour de l'Omer, ce qui fait une semaine et trois jours"
# ---
# name: test_get_omer[french-10-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le dixième jour, ce qui fait une semaine et trois jours de l'Omer"
# ---
# name: test_get_omer[french-10-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le dixième jour, ce qui fait une semaine et trois jours"
# ---
# name: test_get_omer[french-10-Nusach.SFARAD]
  "Aujourd'hui c'est le dixième jour, ce qui fait une semaine et trois jours de l'Omer"
# ---
# name: test_get_omer[french-11-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le onzième jour de l'Omer, ce qui fait une semaine et quatre jours"
# ---
# name: test_get_omer[french-11-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le onzième jour, ce qui fait une semaine et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-11-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le onzième jour, ce qui fait une semaine et quatre jours"
# ---
# name: test_get_omer[french-11-Nusach.SFARAD]
  "Aujourd'hui c'est le onzième jour, ce qui fait une semaine et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-12-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le douzième jour de l'Omer, ce qui fait une semaine et cinq jours"
# ---
# name: test_get_omer[french-12-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le douzième jour, ce qui fait une semaine et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-12-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le douzième jour, ce qui fait une semaine et cinq jours"
# ---
# name: test_get_omer[french-12-Nusach.SFARAD]
  "Aujourd'hui c'est le douzième jour, ce qui fait une semaine et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-13-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le treizième jour de l'Omer, ce qui fait une semaine et six jours"
# ---
# name: test_get_omer[french-13-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le treizième jour, ce qui fait une semaine et six jours de l'Omer"
# ---
# name: test_get_omer[french-13-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le treizième jour, ce qui fait une semaine et six jours"
# ---
# name: test_get_omer[french-13-Nusach.SFARAD]
  "Aujourd'hui c'est le treizième jour, ce qui fait une semaine et six jours de l'Omer"
# ---
# name: test_get_omer[french-14-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quatorzième jour de l'Omer, ce qui fait deux semaines"
# ---
# name: test_get_omer[french-14-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quatorzième jour, ce qui fait deux semaines de l'Omer"
# ---
# name: test_get_omer[french-14-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quatorzième jour, ce qui fait deux semaines"
# ---
# name: test_get_omer[french-14-Nusach.SFARAD]
  "Aujourd'hui c'est le quatorzième jour, ce qui fait deux semaines de l'Omer"
# ---
# name: test_get_omer[french-15-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quinzième jour de l'Omer, ce qui fait deux semaines et un jour"
# ---
# name: test_get_omer[french-15-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quinzième jour, ce qui fait deux semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-15-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quinzième jour, ce qui fait deux semaines et un jour"
# ---
# name: test_get_omer[french-15-Nusach.SFARAD]
  "Aujourd'hui c'est le quinzième jour, ce qui fait deux semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-16-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le seizième jour de l'Omer, ce qui fait deux semaines et deux jours"
# ---
# name: test_get_omer[french-16-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le seizième jour, ce qui fait deux semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-16-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le seizième jour, ce qui fait deux semaines et deux jours"
# ---
# name: test_get_omer[french-16-Nusach.SFARAD]
  "Aujourd'hui c'est le seizième jour, ce qui fait deux semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-17-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le dix-septième jour de l'Omer, ce qui fait deux semaines et trois jours"
# ---
# name: test_get_omer[french-17-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le dix-septième jour, ce qui fait deux semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-17-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le dix-septième jour, ce qui fait deux semaines et trois jours"
# ---
# name: test_get_omer[french-17-Nusach.SFARAD]
  "Aujourd'hui c'est le dix-septième jour, ce qui fait deux semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-18-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le dix-huitième jour de l'Omer, ce qui fait deux semaines et quatre jours"
# ---
# name: test_get_omer[french-18-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le dix-huitième jour, ce qui fait deux semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-18-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le dix-huitième jour, ce qui fait deux semaines et quatre jours"
# ---
# name: test_get_omer[french-18-Nusach.SFARAD]
  "Aujourd'hui c'est le dix-huitième jour, ce qui fait deux semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-19-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le dix-neuvième jour de l'Omer, ce qui fait deux semaines et cinq jours"
# ---
# name: test_get_omer[french-19-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le dix-neuvième jour, ce qui fait deux semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-19-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le dix-neuvième jour, ce qui fait deux semaines et cinq jours"
# ---
# name: test_get_omer[french-19-Nusach.SFARAD]
  "Aujourd'hui c'est le dix-neuvième jour, ce qui fait deux semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-2-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le deuxième jour de l'Omer"
# ---
# name: test_get_omer[french-2-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le deuxième jour de l'Omer"
# ---
# name: test_get_omer[french-2-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le deuxième jour"
# ---
# name: test_get_omer[french-2-Nusach.SFARAD]
  "Aujourd'hui c'est le deuxième jour de l'Omer"
# ---
# name: test_get_omer[french-20-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingtième jour de l'Omer, ce qui fait deux semaines et six jours"
# ---
# name: test_get_omer[french-20-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingtième jour, ce qui fait deux semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-20-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingtième jour, ce qui fait deux semaines et six jours"
# ---
# name: test_get_omer[french-20-Nusach.SFARAD]
  "Aujourd'hui c'est le vingtième jour, ce qui fait deux semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-21-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt et unième jour de l'Omer, ce qui fait trois semaines"
# ---
# name: test_get_omer[french-21-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt et unième jour, ce qui fait trois semaines de l'Omer"
# ---
# name: test_get_omer[french-21-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt et unième jour, ce qui fait trois semaines"
# ---
# name: test_get_omer[french-21-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt et unième jour, ce qui fait trois semaines de l'Omer"
# ---
# name: test_get_omer[french-22-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-deuxième jour de l'Omer, ce qui fait trois semaines et un jour"
# ---
# name: test_get_omer[french-22-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-deuxième jour, ce qui fait trois semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-22-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-deuxième jour, ce qui fait trois semaines et un jour"
# ---
# name: test_get_omer[french-22-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-deuxième jour, ce qui fait trois semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-23-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-troisième jour de l'Omer, ce qui fait trois semaines et deux jours"
# ---
# name: test_get_omer[french-23-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-troisième jour, ce qui fait trois semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-23-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-troisième jour, ce qui fait trois semaines et deux jours"
# ---
# name: test_get_omer[french-23-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-troisième jour, ce qui fait trois semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-24-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-quatrième jour de l'Omer, ce qui fait trois semaines et trois jours"
# ---
# name: test_get_omer[french-24-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-quatrième jour, ce qui fait trois semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-24-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-quatrième jour, ce qui fait trois semaines et trois jours"
# ---
# name: test_get_omer[french-24-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-quatrième jour, ce qui fait trois semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-25-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-cinquième jour de l'Omer, ce qui fait trois semaines et quatre jours"
# ---
# name: test_get_omer[french-25-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-cinquième jour, ce qui fait trois semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-25-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-cinquième jour, ce qui fait trois semaines et quatre jours"
# ---
# name: test_get_omer[french-25-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-cinquième jour, ce qui fait trois semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-26-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-sixième jour de l'Omer, ce qui fait trois semaines et cinq jours"
# ---
# name: test_get_omer[french-26-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-sixième jour, ce qui fait trois semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-26-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-sixième jour, ce qui fait trois semaines et cinq jours"
# ---
# name: test_get_omer[french-26-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-sixième jour, ce qui fait trois semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-27-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-septième jour de l'Omer, ce qui fait trois semaines et six jours"
# ---
# name: test_get_omer[french-27-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-septième jour, ce qui fait trois semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-27-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-septième jour, ce qui fait trois semaines et six jours"
# ---
# name: test_get_omer[french-27-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-septième jour, ce qui fait trois semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-28-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-huitième jour de l'Omer, ce qui fait quatre semaines"
# ---
# name: test_get_omer[french-28-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-huitième jour, ce qui fait quatre semaines de l'Omer"
# ---
# name: test_get_omer[french-28-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-huitième jour, ce qui fait quatre semaines"
# ---
# name: test_get_omer[french-28-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-huitième jour, ce qui fait quatre semaines de l'Omer"
# ---
# name: test_get_omer[french-29-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le vingt-neuvième jour de l'Omer, ce qui fait quatre semaines et un jour"
# ---
# name: test_get_omer[french-29-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le vingt-neuvième jour, ce qui fait quatre semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-29-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le vingt-neuvième jour, ce qui fait quatre semaines et un jour"
# ---
# name: test_get_omer[french-29-Nusach.SFARAD]
  "Aujourd'hui c'est le vingt-neuvième jour, ce qui fait quatre semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-3-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le troisième jour de l'Omer"
# ---
# name: test_get_omer[french-3-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le troisième jour de l'Omer"
# ---
# name: test_get_omer[french-3-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le troisième jour"
# ---
# name: test_get_omer[french-3-Nusach.SFARAD]
  "Aujourd'hui c'est le troisième jour de l'Omer"
# ---
# name: test_get_omer[french-30-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trentième jour de l'Omer, ce qui fait quatre semaines et deux jours"
# ---
# name: test_get_omer[french-30-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trentième jour, ce qui fait quatre semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-30-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trentième jour, ce qui fait quatre semaines et deux jours"
# ---
# name: test_get_omer[french-30-Nusach.SFARAD]
  "Aujourd'hui c'est le trentième jour, ce qui fait quatre semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-31-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente et unième jour de l'Omer, ce qui fait quatre semaines et trois jours"
# ---
# name: test_get_omer[french-31-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente et unième jour, ce qui fait quatre semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-31-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente et unième jour, ce qui fait quatre semaines et trois jours"
# ---
# name: test_get_omer[french-31-Nusach.SFARAD]
  "Aujourd'hui c'est le trente et unième jour, ce qui fait quatre semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-32-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-deuxième jour de l'Omer, ce qui fait quatre semaines et quatre jours"
# ---
# name: test_get_omer[french-32-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-deuxième jour, ce qui fait quatre semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-32-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-deuxième jour, ce qui fait quatre semaines et quatre jours"
# ---
# name: test_get_omer[french-32-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-deuxième jour, ce qui fait quatre semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-33-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-troisième jour de l'Omer, ce qui fait quatre semaines et cinq jours"
# ---
# name: test_get_omer[french-33-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-troisième jour, ce qui fait quatre semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-33-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-troisième jour, ce qui fait quatre semaines et cinq jours"
# ---
# name: test_get_omer[french-33-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-troisième jour, ce qui fait quatre semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-34-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-quatrième jour de l'Omer, ce qui fait quatre semaines et six jours"
# ---
# name: test_get_omer[french-34-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-quatrième jour, ce qui fait quatre semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-34-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-quatrième jour, ce qui fait quatre semaines et six jours"
# ---
# name: test_get_omer[french-34-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-quatrième jour, ce qui fait quatre semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-35-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-cinquième jour de l'Omer, ce qui fait cinq semaines"
# ---
# name: test_get_omer[french-35-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-cinquième jour, ce qui fait cinq semaines de l'Omer"
# ---
# name: test_get_omer[french-35-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-cinquième jour, ce qui fait cinq semaines"
# ---
# name: test_get_omer[french-35-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-cinquième jour, ce qui fait cinq semaines de l'Omer"
# ---
# name: test_get_omer[french-36-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-sixième jour de l'Omer, ce qui fait cinq semaines et un jour"
# ---
# name: test_get_omer[french-36-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-sixième jour, ce qui fait cinq semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-36-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-sixième jour, ce qui fait cinq semaines et un jour"
# ---
# name: test_get_omer[french-36-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-sixième jour, ce qui fait cinq semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-37-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-septième jour de l'Omer, ce qui fait cinq semaines et deux jours"
# ---
# name: test_get_omer[french-37-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-septième jour, ce qui fait cinq semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-37-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-septième jour, ce qui fait cinq semaines et deux jours"
# ---
# name: test_get_omer[french-37-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-septième jour, ce qui fait cinq semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-38-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-huitième jour de l'Omer, ce qui fait cinq semaines et trois jours"
# ---
# name: test_get_omer[french-38-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-huitième jour, ce qui fait cinq semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-38-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-huitième jour, ce qui fait cinq semaines et trois jours"
# ---
# name: test_get_omer[french-38-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-huitième jour, ce qui fait cinq semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-39-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le trente-neuvième jour de l'Omer, ce qui fait cinq semaines et quatre jours"
# ---
# name: test_get_omer[french-39-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le trente-neuvième jour, ce qui fait cinq semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-39-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le trente-neuvième jour, ce qui fait cinq semaines et quatre jours"
# ---
# name: test_get_omer[french-39-Nusach.SFARAD]
  "Aujourd'hui c'est le trente-neuvième jour, ce qui fait cinq semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-4-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quatrième jour de l'Omer"
# ---
# name: test_get_omer[french-4-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quatrième jour de l'Omer"
# ---
# name: test_get_omer[french-4-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quatrième jour"
# ---
# name: test_get_omer[french-4-Nusach.SFARAD]
  "Aujourd'hui c'est le quatrième jour de l'Omer"
# ---
# name: test_get_omer[french-40-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarantième jour de l'Omer, ce qui fait cinq semaines et cinq jours"
# ---
# name: test_get_omer[french-40-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarantième jour, ce qui fait cinq semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-40-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarantième jour, ce qui fait cinq semaines et cinq jours"
# ---
# name: test_get_omer[french-40-Nusach.SFARAD]
  "Aujourd'hui c'est le quarantième jour, ce qui fait cinq semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-41-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante et unième jour de l'Omer, ce qui fait cinq semaines et six jours"
# ---
# name: test_get_omer[french-41-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante et unième jour, ce qui fait cinq semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-41-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante et unième jour, ce qui fait cinq semaines et six jours"
# ---
# name: test_get_omer[french-41-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante et unième jour, ce qui fait cinq semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-42-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-deuxième jour de l'Omer, ce qui fait six semaines"
# ---
# name: test_get_omer[french-42-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-deuxième jour, ce qui fait six semaines de l'Omer"
# ---
# name: test_get_omer[french-42-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-deuxième jour, ce qui fait six semaines"
# ---
# name: test_get_omer[french-42-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-deuxième jour, ce qui fait six semaines de l'Omer"
# ---
# name: test_get_omer[french-43-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-troisième jour de l'Omer, ce qui fait six semaines et un jour"
# ---
# name: test_get_omer[french-43-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-troisième jour, ce qui fait six semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-43-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-troisième jour, ce qui fait six semaines et un jour"
# ---
# name: test_get_omer[french-43-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-troisième jour, ce qui fait six semaines et un jour de l'Omer"
# ---
# name: test_get_omer[french-44-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-quatrième jour de l'Omer, ce qui fait six semaines et deux jours"
# ---
# name: test_get_omer[french-44-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-quatrième jour, ce qui fait six semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-44-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-quatrième jour, ce qui fait six semaines et deux jours"
# ---
# name: test_get_omer[french-44-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-quatrième jour, ce qui fait six semaines et deux jours de l'Omer"
# ---
# name: test_get_omer[french-45-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-cinquième jour de l'Omer, ce qui fait six semaines et trois jours"
# ---
# name: test_get_omer[french-45-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-cinquième jour, ce qui fait six semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-45-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-cinquième jour, ce qui fait six semaines et trois jours"
# ---
# name: test_get_omer[french-45-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-cinquième jour, ce qui fait six semaines et trois jours de l'Omer"
# ---
# name: test_get_omer[french-46-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-sixième jour de l'Omer, ce qui fait six semaines et quatre jours"
# ---
# name: test_get_omer[french-46-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-sixième jour, ce qui fait six semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-46-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-sixième jour, ce qui fait six semaines et quatre jours"
# ---
# name: test_get_omer[french-46-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-sixième jour, ce qui fait six semaines et quatre jours de l'Omer"
# ---
# name: test_get_omer[french-47-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-septième jour de l'Omer, ce qui fait six semaines et cinq jours"
# ---
# name: test_get_omer[french-47-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-septième jour, ce qui fait six semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-47-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-septième jour, ce qui fait six semaines et cinq jours"
# ---
# name: test_get_omer[french-47-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-septième jour, ce qui fait six semaines et cinq jours de l'Omer"
# ---
# name: test_get_omer[french-48-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-huitième jour de l'Omer, ce qui fait six semaines et six jours"
# ---
# name: test_get_omer[french-48-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-huitième jour, ce qui fait six semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-48-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-huitième jour, ce qui fait six semaines et six jours"
# ---
# name: test_get_omer[french-48-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-huitième jour, ce qui fait six semaines et six jours de l'Omer"
# ---
# name: test_get_omer[french-49-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le quarante-neuvième jour de l'Omer, ce qui fait sept semaines"
# ---
# name: test_get_omer[french-49-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le quarante-neuvième jour, ce qui fait sept semaines de l'Omer"
# ---
# name: test_get_omer[french-49-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le quarante-neuvième jour, ce qui fait sept semaines"
# ---
# name: test_get_omer[french-49-Nusach.SFARAD]
  "Aujourd'hui c'est le quarante-neuvième jour, ce qui fait sept semaines de l'Omer"
# ---
# name: test_get_omer[french-5-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le cinquième jour de l'Omer"
# ---
# name: test_get_omer[french-5-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le cinquième jour de l'Omer"
# ---
# name: test_get_omer[french-5-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le cinquième jour"
# ---
# name: test_get_omer[french-5-Nusach.SFARAD]
  "Aujourd'hui c'est le cinquième jour de l'Omer"
# ---
# name: test_get_omer[french-6-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le sixième jour de l'Omer"
# ---
# name: test_get_omer[french-6-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le sixième jour de l'Omer"
# ---
# name: test_get_omer[french-6-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le sixième jour"
# ---
# name: test_get_omer[french-6-Nusach.SFARAD]
  "Aujourd'hui c'est le sixième jour de l'Omer"
# ---
# name: test_get_omer[french-7-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le septième jour de l'Omer, ce qui fait une semaine"
# ---
# name: test_get_omer[french-7-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le septième jour, ce qui fait une semaine de l'Omer"
# ---
# name: test_get_omer[french-7-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le septième jour, ce qui fait une semaine"
# ---
# name: test_get_omer[french-7-Nusach.SFARAD]
  "Aujourd'hui c'est le septième jour, ce qui fait une semaine de l'Omer"
# ---
# name: test_get_omer[french-8-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le huitième jour de l'Omer, ce qui fait une semaine et un jour"
# ---
# name: test_get_omer[french-8-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le huitième jour, ce qui fait une semaine et un jour de l'Omer"
# ---
# name: test_get_omer[french-8-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le huitième jour, ce qui fait une semaine et un jour"
# ---
# name: test_get_omer[french-8-Nusach.SFARAD]
  "Aujourd'hui c'est le huitième jour, ce qui fait une semaine et un jour de l'Omer"
# ---
# name: test_get_omer[french-9-Nusach.ADOT_MIZRAH]
  "Aujourd'hui c'est le neuvième jour de l'Omer, ce qui fait une semaine et deux jours"
# ---
# name: test_get_omer[french-9-Nusach.ASHKENAZ]
  "Aujourd'hui c'est le neuvième jour, ce qui fait une semaine et deux jours de l'Omer"
# ---
# name: test_get_omer[french-9-Nusach.ITALIAN]
  "Aujourd'hui de l'Omer c'est le neuvième jour, ce qui fait une semaine et deux jours"
# ---
# name: test_get_omer[french-9-Nusach.SFARAD]
  "Aujourd'hui c'est le neuvième jour, ce qui fait une semaine et deux jours de l'Omer"
# ---
# name: test_get_omer[hebrew-1-Nusach.ADOT_MIZRAH]
  'היום יום אחד לעומר'
# ---
# name: test_get_omer[hebrew-1-Nusach.ASHKENAZ]
  'היום יום אחד בעומר'
# ---
# name: test_get_omer[hebrew-1-Nusach.ITALIAN]
  'היום לעומר יום אחד'
# ---
# name: test_get_omer[hebrew-1-Nusach.SFARAD]
  'היום יום אחד לעומר'
# ---
# name: test_get_omer[hebrew-10-Nusach.ADOT_MIZRAH]
  'היום עשרה ימים לעומר שהם שבוע אחד ושלושה ימים'
# ---
# name: test_get_omer[hebrew-10-Nusach.ASHKENAZ]
  'היום עשרה ימים שהם שבוע אחד ושלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-10-Nusach.ITALIAN]
  'היום לעומר עשרה ימים שהם שבוע אחד ושלושה ימים'
# ---
# name: test_get_omer[hebrew-10-Nusach.SFARAD]
  'היום עשרה ימים שהם שבוע אחד ושלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-11-Nusach.ADOT_MIZRAH]
  'היום אחד עשר יום לעומר שהם שבוע אחד וארבעה ימים'
# ---
# name: test_get_omer[hebrew-11-Nusach.ASHKENAZ]
  'היום אחד עשר יום שהם שבוע אחד וארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-11-Nusach.ITALIAN]
  'היום לעומר אחד עשר יום שהם שבוע אחד וארבעה ימים'
# ---
# name: test_get_omer[hebrew-11-Nusach.SFARAD]
  'היום אחד עשר יום שהם שבוע אחד וארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-12-Nusach.ADOT_MIZRAH]
  'היום שנים עשר יום לעומר שהם שבוע אחד וחמישה ימים'
# ---
# name: test_get_omer[hebrew-12-Nusach.ASHKENAZ]
  'היום שנים עשר יום שהם שבוע אחד וחמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-12-Nusach.ITALIAN]
  'היום לעומר שנים עשר יום שהם שבוע אחד וחמישה ימים'
# ---
# name: test_get_omer[hebrew-12-Nusach.SFARAD]
  'היום שנים עשר יום שהם שבוע אחד וחמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-13-Nusach.ADOT_MIZRAH]
  'היום שלושה עשר יום לעומר שהם שבוע אחד ושישה ימים'
# ---
# name: test_get_omer[hebrew-13-Nusach.ASHKENAZ]
  'היום שלושה עשר יום שהם שבוע אחד ושישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-13-Nusach.ITALIAN]
  'היום לעומר שלושה עשר יום שהם שבוע אחד ושישה ימים'
# ---
# name: test_get_omer[hebrew-13-Nusach.SFARAD]
  'היום שלושה עשר יום שהם שבוע אחד ושישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-14-Nusach.ADOT_MIZRAH]
  'היום ארבעה עשר יום לעומר שהם שני שבועות'
# ---
# name: test_get_omer[hebrew-14-Nusach.ASHKENAZ]
  'היום ארבעה עשר יום שהם שני שבועות בעומר'
# ---
# name: test_get_omer[hebrew-14-Nusach.ITALIAN]
  'היום לעומר ארבעה עשר יום שהם שני שבועות'
# ---
# name: test_get_omer[hebrew-14-Nusach.SFARAD]
  'היום ארבעה עשר יום שהם שני שבועות לעומר'
# ---
# name: test_get_omer[hebrew-15-Nusach.ADOT_MIZRAH]
  'היום חמישה עשר יום לעומר שהם שני שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-15-Nusach.ASHKENAZ]
  'היום חמישה עשר יום שהם שני שבועות ויום אחד בעומר'
# ---
# name: test_get_omer[hebrew-15-Nusach.ITALIAN]
  'היום לעומר חמישה עשר יום שהם שני שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-15-Nusach.SFARAD]
  'היום חמישה עשר יום שהם שני שבועות ויום אחד לעומר'
# ---
# name: test_get_omer[hebrew-16-Nusach.ADOT_MIZRAH]
  'היום שישה עשר יום לעומר שהם שני שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-16-Nusach.ASHKENAZ]
  'היום שישה עשר יום שהם שני שבועות ושני ימים בעומר'
# ---
# name: test_get_omer[hebrew-16-Nusach.ITALIAN]
  'היום לעומר שישה עשר יום שהם שני שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-16-Nusach.SFARAD]
  'היום שישה עשר יום שהם שני שבועות ושני ימים לעומר'
# ---
# name: test_get_omer[hebrew-17-Nusach.ADOT_MIZRAH]
  'היום שבעה עשר יום לעומר שהם שני שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-17-Nusach.ASHKENAZ]
  'היום שבעה עשר יום שהם שני שבועות ושלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-17-Nusach.ITALIAN]
  'היום לעומר שבעה עשר יום שהם שני שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-17-Nusach.SFARAD]
  'היום שבעה עשר יום שהם שני שבועות ושלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-18-Nusach.ADOT_MIZRAH]
  'היום שמונה עשר יום לעומר שהם שני שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-18-Nusach.ASHKENAZ]
  'היום שמונה עשר יום שהם שני שבועות וארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-18-Nusach.ITALIAN]
  'היום לעומר שמונה עשר יום שהם שני שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-18-Nusach.SFARAD]
  'היום שמונה עשר יום שהם שני שבועות וארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-19-Nusach.ADOT_MIZRAH]
  'היום תשעה עשר יום לעומר שהם שני שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-19-Nusach.ASHKENAZ]
  'היום תשעה עשר יום שהם שני שבועות וחמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-19-Nusach.ITALIAN]
  'היום לעומר תשעה עשר יום שהם שני שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-19-Nusach.SFARAD]
  'היום תשעה עשר יום שהם שני שבועות וחמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-2-Nusach.ADOT_MIZRAH]
  'היום שני ימים לעומר'
# ---
# name: test_get_omer[hebrew-2-Nusach.ASHKENAZ]
  'היום שני ימים בעומר'
# ---
# name: test_get_omer[hebrew-2-Nusach.ITALIAN]
  'היום לעומר שני ימים'
# ---
# name: test_get_omer[hebrew-2-Nusach.SFARAD]
  'היום שני ימים לעומר'
# ---
# name: test_get_omer[hebrew-20-Nusach.ADOT_MIZRAH]
  'היום עשרים יום לעומר שהם שני שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-20-Nusach.ASHKENAZ]
  'היום עשרים יום שהם שני שבועות ושישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-20-Nusach.ITALIAN]
  'היום לעומר עשרים יום שהם שני שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-20-Nusach.SFARAD]
  'היום עשרים יום שהם שני שבועות ושישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-21-Nusach.ADOT_MIZRAH]
  'היום אחד ועשרים יום לעומר שהם שלושה שבועות'
# ---
# name: test_get_omer[hebrew-21-Nusach.ASHKENAZ]
  'היום אחד ועשרים יום שהם שלושה שבועות בעומר'
# ---
# name: test_get_omer[hebrew-21-Nusach.ITALIAN]
  'היום לעומר אחד ועשרים יום שהם שלושה שבועות'
# ---
# name: test_get_omer[hebrew-21-Nusach.SFARAD]
  'היום אחד ועשרים יום שהם שלושה שבועות לעומר'
# ---
# name: test_get_omer[hebrew-22-Nusach.ADOT_MIZRAH]
  'היום שניים ועשרים יום לעומר שהם שלושה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-22-Nusach.ASHKENAZ]
  'היום שניים ועשרים יום שהם שלושה שבועות ויום אחד בעומר'
# ---
# name: test_get_omer[hebrew-22-Nusach.ITALIAN]
  'היום לעומר שניים ועשרים יום שהם שלושה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-22-Nusach.SFARAD]
  'היום שניים ועשרים יום שהם שלושה שבועות ויום אחד לעומר'
# ---
# name: test_get_omer[hebrew-23-Nusach.ADOT_MIZRAH]
  'היום שלושה ועשרים יום לעומר שהם שלושה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-23-Nusach.ASHKENAZ]
  'היום שלושה ועשרים יום שהם שלושה שבועות ושני ימים בעומר'
# ---
# name: test_get_omer[hebrew-23-Nusach.ITALIAN]
  'היום לעומר שלושה ועשרים יום שהם שלושה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-23-Nusach.SFARAD]
  'היום שלושה ועשרים יום שהם שלושה שבועות ושני ימים לעומר'
# ---
# name: test_get_omer[hebrew-24-Nusach.ADOT_MIZRAH]
  'היום ארבעה ועשרים יום לעומר שהם שלושה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-24-Nusach.ASHKENAZ]
  'היום ארבעה ועשרים יום שהם שלושה שבועות ושלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-24-Nusach.ITALIAN]
  'היום לעומר ארבעה ועשרים יום שהם שלושה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-24-Nusach.SFARAD]
  'היום ארבעה ועשרים יום שהם שלושה שבועות ושלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-25-Nusach.ADOT_MIZRAH]
  'היום חמישה ועשרים יום לעומר שהם שלושה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-25-Nusach.ASHKENAZ]
  'היום חמישה ועשרים יום שהם שלושה שבועות וארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-25-Nusach.ITALIAN]
  'היום לעומר חמישה ועשרים יום שהם שלושה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-25-Nusach.SFARAD]
  'היום חמישה ועשרים יום שהם שלושה שבועות וארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-26-Nusach.ADOT_MIZRAH]
  'היום שישה ועשרים יום לעומר שהם שלושה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-26-Nusach.ASHKENAZ]
  'היום שישה ועשרים יום שהם שלושה שבועות וחמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-26-Nusach.ITALIAN]
  'היום לעומר שישה ועשרים יום שהם שלושה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-26-Nusach.SFARAD]
  'היום שישה ועשרים יום שהם שלושה שבועות וחמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-27-Nusach.ADOT_MIZRAH]
  'היום שבעה ועשרים יום לעומר שהם שלושה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-27-Nusach.ASHKENAZ]
  'היום שבעה ועשרים יום שהם שלושה שבועות ושישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-27-Nusach.ITALIAN]
  'היום לעומר שבעה ועשרים יום שהם שלושה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-27-Nusach.SFARAD]
  'היום שבעה ועשרים יום שהם שלושה שבועות ושישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-28-Nusach.ADOT_MIZRAH]
  'היום שמונה ועשרים יום לעומר שהם ארבעה שבועות'
# ---
# name: test_get_omer[hebrew-28-Nusach.ASHKENAZ]
  'היום שמונה ועשרים יום שהם ארבעה שבועות בעומר'
# ---
# name: test_get_omer[hebrew-28-Nusach.ITALIAN]
  'היום לעומר שמונה ועשרים יום שהם ארבעה שבועות'
# ---
# name: test_get_omer[hebrew-28-Nusach.SFARAD]
  'היום שמונה ועשרים יום שהם ארבעה שבועות לעומר'
# ---
# name: test_get_omer[hebrew-29-Nusach.ADOT_MIZRAH]
  'היום תשעה ועשרים יום לעומר שהם ארבעה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-29-Nusach.ASHKENAZ]
  'היום תשעה ועשרים יום שהם ארבעה שבועות ויום אחד בעומר'
# ---
# name: test_get_omer[hebrew-29-Nusach.ITALIAN]
  'היום לעומר תשעה ועשרים יום שהם ארבעה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-29-Nusach.SFARAD]
  'היום תשעה ועשרים יום שהם ארבעה שבועות ויום אחד לעומר'
# ---
# name: test_get_omer[hebrew-3-Nusach.ADOT_MIZRAH]
  'היום שלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-3-Nusach.ASHKENAZ]
  'היום שלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-3-Nusach.ITALIAN]
  'היום לעומר שלושה ימים'
# ---
# name: test_get_omer[hebrew-3-Nusach.SFARAD]
  'היום שלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-30-Nusach.ADOT_MIZRAH]
  'היום שלושים יום לעומר שהם ארבעה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-30-Nusach.ASHKENAZ]
  'היום שלושים יום שהם ארבעה שבועות ושני ימים בעומר'
# ---
# name: test_get_omer[hebrew-30-Nusach.ITALIAN]
  'היום לעומר שלושים יום שהם ארבעה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-30-Nusach.SFARAD]
  'היום שלושים יום שהם ארבעה שבועות ושני ימים לעומר'
# ---
# name: test_get_omer[hebrew-31-Nusach.ADOT_MIZRAH]
  'היום אחד ושלושים יום לעומר שהם ארבעה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-31-Nusach.ASHKENAZ]
  'היום אחד ושלושים יום שהם ארבעה שבועות ושלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-31-Nusach.ITALIAN]
  'היום לעומר אחד ושלושים יום שהם ארבעה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-31-Nusach.SFARAD]
  'היום אחד ושלושים יום שהם ארבעה שבועות ושלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-32-Nusach.ADOT_MIZRAH]
  'היום שניים ושלושים יום לעומר שהם ארבעה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-32-Nusach.ASHKENAZ]
  'היום שניים ושלושים יום שהם ארבעה שבועות וארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-32-Nusach.ITALIAN]
  'היום לעומר שניים ושלושים יום שהם ארבעה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-32-Nusach.SFARAD]
  'היום שניים ושלושים יום שהם ארבעה שבועות וארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-33-Nusach.ADOT_MIZRAH]
  'היום שלושה ושלושים יום לעומר שהם ארבעה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-33-Nusach.ASHKENAZ]
  'היום שלושה ושלושים יום שהם ארבעה שבועות וחמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-33-Nusach.ITALIAN]
  'היום לעומר שלושה ושלושים יום שהם ארבעה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-33-Nusach.SFARAD]
  'היום שלושה ושלושים יום שהם ארבעה שבועות וחמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-34-Nusach.ADOT_MIZRAH]
  'היום ארבעה ושלושים יום לעומר שהם ארבעה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-34-Nusach.ASHKENAZ]
  'היום ארבעה ושלושים יום שהם ארבעה שבועות ושישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-34-Nusach.ITALIAN]
  'היום לעומר ארבעה ושלושים יום שהם ארבעה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-34-Nusach.SFARAD]
  'היום ארבעה ושלושים יום שהם ארבעה שבועות ושישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-35-Nusach.ADOT_MIZRAH]
  'היום חמישה ושלושים יום לעומר שהם חמישה שבועות'
# ---
# name: test_get_omer[hebrew-35-Nusach.ASHKENAZ]
  'היום חמישה ושלושים יום שהם חמישה שבועות בעומר'
# ---
# name: test_get_omer[hebrew-35-Nusach.ITALIAN]
  'היום לעומר חמישה ושלושים יום שהם חמישה שבועות'
# ---
# name: test_get_omer[hebrew-35-Nusach.SFARAD]
  'היום חמישה ושלושים יום שהם חמישה שבועות לעומר'
# ---
# name: test_get_omer[hebrew-36-Nusach.ADOT_MIZRAH]
  'היום שישה ושלושים יום לעומר שהם חמישה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-36-Nusach.ASHKENAZ]
  'היום שישה ושלושים יום שהם חמישה שבועות ויום אחד בעומר'
# ---
# name: test_get_omer[hebrew-36-Nusach.ITALIAN]
  'היום לעומר שישה ושלושים יום שהם חמישה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-36-Nusach.SFARAD]
  'היום שישה ושלושים יום שהם חמישה שבועות ויום אחד לעומר'
# ---
# name: test_get_omer[hebrew-37-Nusach.ADOT_MIZRAH]
  'היום שבעה ושלושים יום לעומר שהם חמישה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-37-Nusach.ASHKENAZ]
  'היום שבעה ושלושים יום שהם חמישה שבועות ושני ימים בעומר'
# ---
# name: test_get_omer[hebrew-37-Nusach.ITALIAN]
  'היום לעומר שבעה ושלושים יום שהם חמישה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-37-Nusach.SFARAD]
  'היום שבעה ושלושים יום שהם חמישה שבועות ושני ימים לעומר'
# ---
# name: test_get_omer[hebrew-38-Nusach.ADOT_MIZRAH]
  'היום שמונה ושלושים יום לעומר שהם חמישה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-38-Nusach.ASHKENAZ]
  'היום שמונה ושלושים יום שהם חמישה שבועות ושלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-38-Nusach.ITALIAN]
  'היום לעומר שמונה ושלושים יום שהם חמישה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-38-Nusach.SFARAD]
  'היום שמונה ושלושים יום שהם חמישה שבועות ושלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-39-Nusach.ADOT_MIZRAH]
  'היום תשעה ושלושים יום לעומר שהם חמישה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-39-Nusach.ASHKENAZ]
  'היום תשעה ושלושים יום שהם חמישה שבועות וארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-39-Nusach.ITALIAN]
  'היום לעומר תשעה ושלושים יום שהם חמישה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-39-Nusach.SFARAD]
  'היום תשעה ושלושים יום שהם חמישה שבועות וארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-4-Nusach.ADOT_MIZRAH]
  'היום ארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-4-Nusach.ASHKENAZ]
  'היום ארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-4-Nusach.ITALIAN]
  'היום לעומר ארבעה ימים'
# ---
# name: test_get_omer[hebrew-4-Nusach.SFARAD]
  'היום ארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-40-Nusach.ADOT_MIZRAH]
  'היום ארבעים יום לעומר שהם חמישה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-40-Nusach.ASHKENAZ]
  'היום ארבעים יום שהם חמישה שבועות וחמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-40-Nusach.ITALIAN]
  'היום לעומר ארבעים יום שהם חמישה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-40-Nusach.SFARAD]
  'היום ארבעים יום שהם חמישה שבועות וחמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-41-Nusach.ADOT_MIZRAH]
  'היום אחד וארבעים יום לעומר שהם חמישה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-41-Nusach.ASHKENAZ]
  'היום אחד וארבעים יום שהם חמישה שבועות ושישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-41-Nusach.ITALIAN]
  'היום לעומר אחד וארבעים יום שהם חמישה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-41-Nusach.SFARAD]
  'היום אחד וארבעים יום שהם חמישה שבועות ושישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-42-Nusach.ADOT_MIZRAH]
  'היום שניים וארבעים יום לעומר שהם שישה שבועות'
# ---
# name: test_get_omer[hebrew-42-Nusach.ASHKENAZ]
  'היום שניים וארבעים יום שהם שישה שבועות בעומר'
# ---
# name: test_get_omer[hebrew-42-Nusach.ITALIAN]
  'היום לעומר שניים וארבעים יום שהם שישה שבועות'
# ---
# name: test_get_omer[hebrew-42-Nusach.SFARAD]
  'היום שניים וארבעים יום שהם שישה שבועות לעומר'
# ---
# name: test_get_omer[hebrew-43-Nusach.ADOT_MIZRAH]
  'היום שלושה וארבעים יום לעומר שהם שישה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-43-Nusach.ASHKENAZ]
  'היום שלושה וארבעים יום שהם שישה שבועות ויום אחד בעומר'
# ---
# name: test_get_omer[hebrew-43-Nusach.ITALIAN]
  'היום לעומר שלושה וארבעים יום שהם שישה שבועות ויום אחד'
# ---
# name: test_get_omer[hebrew-43-Nusach.SFARAD]
  'היום שלושה וארבעים יום שהם שישה שבועות ויום אחד לעומר'
# ---
# name: test_get_omer[hebrew-44-Nusach.ADOT_MIZRAH]
  'היום ארבעה וארבעים יום לעומר שהם שישה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-44-Nusach.ASHKENAZ]
  'היום ארבעה וארבעים יום שהם שישה שבועות ושני ימים בעומר'
# ---
# name: test_get_omer[hebrew-44-Nusach.ITALIAN]
  'היום לעומר ארבעה וארבעים יום שהם שישה שבועות ושני ימים'
# ---
# name: test_get_omer[hebrew-44-Nusach.SFARAD]
  'היום ארבעה וארבעים יום שהם שישה שבועות ושני ימים לעומר'
# ---
# name: test_get_omer[hebrew-45-Nusach.ADOT_MIZRAH]
  'היום חמישה וארבעים יום לעומר שהם שישה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-45-Nusach.ASHKENAZ]
  'היום חמישה וארבעים יום שהם שישה שבועות ושלושה ימים בעומר'
# ---
# name: test_get_omer[hebrew-45-Nusach.ITALIAN]
  'היום לעומר חמישה וארבעים יום שהם שישה שבועות ושלושה ימים'
# ---
# name: test_get_omer[hebrew-45-Nusach.SFARAD]
  'היום חמישה וארבעים יום שהם שישה שבועות ושלושה ימים לעומר'
# ---
# name: test_get_omer[hebrew-46-Nusach.ADOT_MIZRAH]
  'היום שישה וארבעים יום לעומר שהם שישה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-46-Nusach.ASHKENAZ]
  'היום שישה וארבעים יום שהם שישה שבועות וארבעה ימים בעומר'
# ---
# name: test_get_omer[hebrew-46-Nusach.ITALIAN]
  'היום לעומר שישה וארבעים יום שהם שישה שבועות וארבעה ימים'
# ---
# name: test_get_omer[hebrew-46-Nusach.SFARAD]
  'היום שישה וארבעים יום שהם שישה שבועות וארבעה ימים לעומר'
# ---
# name: test_get_omer[hebrew-47-Nusach.ADOT_MIZRAH]
  'היום שבעה וארבעים יום לעומר שהם שישה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-47-Nusach.ASHKENAZ]
  'היום שבעה וארבעים יום שהם שישה שבועות וחמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-47-Nusach.ITALIAN]
  'היום לעומר שבעה וארבעים יום שהם שישה שבועות וחמישה ימים'
# ---
# name: test_get_omer[hebrew-47-Nusach.SFARAD]
  'היום שבעה וארבעים יום שהם שישה שבועות וחמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-48-Nusach.ADOT_MIZRAH]
  'היום שמונה וארבעים יום לעומר שהם שישה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-48-Nusach.ASHKENAZ]
  'היום שמונה וארבעים יום שהם שישה שבועות ושישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-48-Nusach.ITALIAN]
  'היום לעומר שמונה וארבעים יום שהם שישה שבועות ושישה ימים'
# ---
# name: test_get_omer[hebrew-48-Nusach.SFARAD]
  'היום שמונה וארבעים יום שהם שישה שבועות ושישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-49-Nusach.ADOT_MIZRAH]
  'היום תשעה וארבעים יום לעומר שהם שבעה שבועות'
# ---
# name: test_get_omer[hebrew-49-Nusach.ASHKENAZ]
  'היום תשעה וארבעים יום שהם שבעה שבועות בעומר'
# ---
# name: test_get_omer[hebrew-49-Nusach.ITALIAN]
  'היום לעומר תשעה וארבעים יום שהם שבעה שבועות'
# ---
# name: test_get_omer[hebrew-49-Nusach.SFARAD]
  'היום תשעה וארבעים יום שהם שבעה שבועות לעומר'
# ---
# name: test_get_omer[hebrew-5-Nusach.ADOT_MIZRAH]
  'היום חמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-5-Nusach.ASHKENAZ]
  'היום חמישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-5-Nusach.ITALIAN]
  'היום לעומר חמישה ימים'
# ---
# name: test_get_omer[hebrew-5-Nusach.SFARAD]
  'היום חמישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-6-Nusach.ADOT_MIZRAH]
  'היום שישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-6-Nusach.ASHKENAZ]
  'היום שישה ימים בעומר'
# ---
# name: test_get_omer[hebrew-6-Nusach.ITALIAN]
  'היום לעומר שישה ימים'
# ---
# name: test_get_omer[hebrew-6-Nusach.SFARAD]
  'היום שישה ימים לעומר'
# ---
# name: test_get_omer[hebrew-7-Nusach.ADOT_MIZRAH]
  'היום שבעה ימים לעומר שהם שבוע אחד'
# ---
# name: test_get_omer[hebrew-7-Nusach.ASHKENAZ]
  'היום שבעה ימים שהם שבוע אחד בעומר'
# ---
# name: test_get_omer[hebrew-7-Nusach.ITALIAN]
  'היום לעומר שבעה ימים שהם שבוע אחד'
# ---
# name: test_get_omer[hebrew-7-Nusach.SFARAD]
  'היום שבעה ימים שהם שבוע אחד לעומר'
# ---
# name: test_get_omer[hebrew-8-Nusach.ADOT_MIZRAH]
  'היום שמונה ימים לעומר שהם שבוע אחד ויום אחד'
# ---
# name: test_get_omer[hebrew-8-Nusach.ASHKENAZ]
  'היום שמונה ימים שהם שבוע אחד ויום אחד בעומר'
# ---
# name: test_get_omer[hebrew-8-Nusach.ITALIAN]
  'היום לעומר שמונה ימים שהם שבוע אחד ויום אחד'
# ---
# name: test_get_omer[hebrew-8-Nusach.SFARAD]
  'היום שמונה ימים שהם שבוע אחד ויום אחד לעומר'
# ---
# name: test_get_omer[hebrew-9-Nusach.ADOT_MIZRAH]
  'היום תשעה ימים לעומר שהם שבוע אחד ושני ימים'
# ---
# name: test_get_omer[hebrew-9-Nusach.ASHKENAZ]
  'היום תשעה ימים שהם שבוע אחד ושני ימים בעומר'
# ---
# name: test_get_omer[hebrew-9-Nusach.ITALIAN]
  'היום לעומר תשעה ימים שהם שבוע אחד ושני ימים'
# ---
# name: test_get_omer[hebrew-9-Nusach.SFARAD]
  'היום תשעה ימים שהם שבוע אחד ושני ימים לעומר'
# ---
